--- a/versioned_flows/emr_module/bucket.yml
+++ b/versioned_flows/emr_module/bucket.yml
@@ -2,5 +2,8 @@ flows:
   6b596537-ec76-4e1f-825a-554446115f03: {ver: 1, file: emr_module_in_staging.snapshot,
     comments: SI-XXX emr module in staging, author: anonymous, created: 1650957718521,
     flowName: emr module in staging, flowDesc: emr module in staging}
+  16019dc1-8dfc-47db-9205-19a44192a4a9: {ver: 1, file: terminate_emr_module.snapshot,
+    comments: SI-XXX terminate emr module, author: anonymous, created: 1650960810257,
+    flowName: terminate emr module, flowDesc: terminate emr module}
 layoutVer: 1
 bucketId: 618f4d50-af63-4e1f-bc1c-6f9398a47c39
